# ForgeFF

./: .gitattributes  .gitignore  LICENSE  README.md  meson.build  pyproject.toml
.github/workflows/: build.yml  docs.yml  pypi.yml  testpypi.yml  tests.yml
benchmarks/: plot_style.py  speed_eam_adp.py  speed_sw.py  speed_tersoff.py  timing.py
docs/: analytical.rst  calculators.rst  conf.py  credit.rst  engines.rst  example.rst  index.rst  installation.rst  io.rst  loss.rst  maintainer.rst  performance.rst  release_notes.rst  sg_execution_times.rst  theory.rst  toml.rst
docs/_static/: custom.css  custom.js
docs/api/: evaluate.rst  grade.rst  train.rst
docs/cli/: error.rst  evaluate.rst  export.rst  forgeff.evaluate.toml  forgeff.grade.toml  forgeff.train.toml  grade.rst  index.rst  template.rst  train.rst
docs/examples/: analytical.rst  index.rst  toml.rst
docs/examples/python/: 4.ga.rst  (+8 more)
docs/optimizers/: anneal.rst  ga.rst  index.rst  scipy.rst
examples/: GALLERY_HEADER.rst
examples/0.0_train/: README.md  ase.xyz  forgeff.toml
examples/1.0_python/: 9.calc.py  GALLERY_HEADER.rst
examples/python/: 0.train.py  1.evaluate.py  2.grade.py  3.anneal.py  4.ga.py  5.convergence_theory.py  9.calc.py
examples/slurm/: script_001_1h.sh
examples/toml/: README.md  potential.toml  train.py
forgeff/: __init__.py  __main__.py  calculator.py  cli.py  energy_offsets.py  loss.py  parallel.py  setting.py  utils.py
forgeff/error/: __init__.py  cli.py
forgeff/evaluate/: __main__.py  cli.py  evaluator.py  setting.py
forgeff/export/: cli.py
forgeff/grade/: __init__.py  __main__.py  cli.py  grader.py  maxvol.py  setting.py
forgeff/io/: __init__.py  lammps.py  nist.py  potfit.py  toml.py  utils.py
forgeff/optimizers/: __init__.py  anneal.py  base.py  ga.py  ideal.py  randomizer.py  scipy.py
forgeff/potentials/: __init__.py
forgeff/template/: __init__.py  cli.py
forgeff/train/: __main__.py  cli.py  setting.py  trainer.py
tests/: conftest.py  test.cfg  test_cli.py  test_robustness.py  test_setting_paths.py
tests/cli/: test_error.py  test_export.py  test_template.py  test_train.py
tests/examples/: test_optimizer_examples.py  test_toml_examples.py
tests/grade/: test_maxvol.py
tests/io/: test_analytical_terms.py  test_io.py  test_lammps.py  test_nist.py  test_potfit.py  test_toml.py
tests/optimizers/: test_anneal.py  test_ga.py  test_parallel_base.py
(+121 files in other folders)
